# tickwise

./: .gitignore  AGENTS.md  README.md  engineering-ontology.md  implementation-phases.md  pyproject.toml  requirements-dev.txt  requirements.txt  specification.md
.github/workflows/: pages.yml
browser-extension/: README.md  background.js  content.js  manifest.firefox.json  manifest.json
browser-extension/options/: options.css  options.html  options.js
browser-extension/popup/: popup.css  popup.html  popup.js
chronolens/: __init__.py  __main__.py  app.py  config.py  runtime.py  tray.py
chronolens/api/: __init__.py  auth.py  routes_calendar.py  routes_categories.py  routes_clients.py  routes_cloudflare.py  routes_invoices.py  routes_llm.py  routes_mobile.py  routes_monitors.py  routes_pairing.py  routes_pomodoro.py  routes_profile.py  routes_projects.py  routes_redaction.py  routes_reports.py  routes_sessions.py  routes_settings.py  websocket.py
chronolens/calendar/: __init__.py  caldav_provider.py  google_provider.py  ics_feed.py  provider.py  sync_service.py
chronolens/capture/: __init__.py  browser_bridge.py  change_detector.py  idle_detector.py  idle_detector_linux.py  idle_detector_macos.py  idle_detector_windows.py  loop.py  screenshot.py  window_info.py  window_info_linux.py  window_info_macos.py  window_info_windows.py
chronolens/classification/: cache.py  claude_client.py  cost_tracker.py  llm_client.py  openai_client.py  pipeline.py
chronolens/cloudflare/: __init__.py  api_client.py  binary.py  setup.py  tunnel_manager.py
chronolens/crypto/: __init__.py  keyring.py
chronolens/db/: __init__.py  connection.py  models.py  schema.py
dashboard/: .gitignore  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
docs/: CNAME  SECURITY.md  implementation-phases.md  index.html  specification.md
electron/: README.md  loading.html  main.js  package.json  preload.js
mobile/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
packaging/: README.md  build.py  build_extension.py  generate_icons.py  installer.nsi  screenshot.ps1  tickwise.spec
tests/: conftest.py
tickwise/: __init__.py  __main__.py  app.py  config.py  runtime.py  tray.py
(+174 files in other folders)
